--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-router": "^1.147.3",
     "@tanstack/react-table": "^8.21.3",
-    "@uidotdev/usehooks": "^2.4.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.2.1",
     "dexie-react-hooks": "^4.2.0",
@@ -30,6 +29,7 @@
     "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.3",
     "sonner": "^2.0.7",
+    "usehooks-ts": "^3.1.1",
     "workbox-window": "^7.4.0",
     "zod": "^4.3.5"
   },
