--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@listock/client",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
@@ -17,8 +18,10 @@
     "@mui/material": "^7.3.7",
     "@orpc/client": "^1.13.2",
     "@orpc/tanstack-query": "^1.13.2",
+    "@tanstack/query-async-storage-persister": "^5.90.19",
     "@tanstack/react-pacer": "^0.19.1",
     "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-persist-client": "^5.90.19",
     "@tanstack/react-router": "^1.147.3",
     "@tanstack/react-table": "^8.21.3",
     "comlink": "^4.4.2",
