--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@/*": ["./*"]
     },
+    "outDir": "build",
     "moduleResolution": "bundler",
     "module": "ESNext",
     "target": "ESNext",
