--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "dev:client": "npm run dev -w client",
     "dev:server": "npm run dev -w server",
     "dev:db": "npm run dev -w supabase",
-    "build": "concurrently -c auto npm:build:client npm:buildserver",
+    "build": "concurrently -c auto npm:build:client npm:build:server",
     "build:client": "npm run build -w client",
     "build:server": "npm run build -w server",
     "check": "biome check",
     "format": "biome check --write",
-    "tsc": "concurrently -c auto npm:tsc:client npm:tsc:server",
+    "tsc": "concurrently -c auto npm:tsc:server npm:tsc:client",
     "tsc:client": "npm run -w client tsc",
     "tsc:server": "npm run -w server tsc",
     "test": "concurrently -c auto npm:test:client npm:test:server",
