--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,8 +12,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-      - run: npm ci --workspace tests --workspace msw --include-workspace-root
+      - run: npm ci --workspace client --workspace tests --workspace msw --include-workspace-root
       - run: npm run test:client
+
   server:
     runs-on: ubuntu-latest
     steps:
@@ -21,5 +22,5 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-      - run: npm ci --workspace tests --workspace msw --include-workspace-root
+      - run: npm ci --workspace server --workspace tests --workspace msw --include-workspace-root
       - run: npm run test:server
