--- a/.github/workflows/biome.yml
+++ b/.github/workflows/biome.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   # Runs formatter, linter and import sorting
-  biome:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
