--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,5 +10,7 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable", "WebWorker"],
     "jsx": "react-jsx",
     "types": ["vite/client"]
-  }
+  },
+  "include": ["./package.json", "**/*.ts", "**/*.tsx"],
+  "references": [{ "path": "../server" }]
 }
