--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     /** *** */
     "moduleResolution": "Bundler",
     "module": "ESNext",
-    "sourceMap": true,
-    "noEmit": true
+    "sourceMap": true
   },
-  "exclude": ["*.test.tsx?"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
 }
