--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "build:server": "npm run build -w server",
     "check": "biome check",
     "format": "biome check --write",
-    "tsc": "concurrently -c auto npm:tsc:server npm:tsc:client",
-    "tsc:client": "npm run -w client tsc",
-    "tsc:server": "npm run -w server tsc",
+    "types": "concurrently -c auto npm:types:server npm:types:client",
+    "types:client": "npm run -w client types",
+    "types:server": "npm run -w server types",
     "test": "concurrently -c auto npm:test:client npm:test:server",
     "test:client": "npm run test -w client",
     "test:server": "npm run test -w server",
-    "verify": "concurrently -c auto npm:tsc npm:check npm:test",
+    "verify": "concurrently -c auto npm:check npm:test npm:types",
     "gen:types": "npm run gen:types -w supabase",
     "db:reset": "npm run db:reset -w supabase",
     "db:diff": "npm run db:diff -w supabase"
