--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "tsc": "tsc --noEmit",
+    "types": "tsc --noEmit",
     "test": "vitest --config ./vitest.config.ts"
   },
   "dependencies": {
