--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsx watch --clear-screen=false --env-file=.env.local ./index.ts",
     "build": "tsc",
-    "tsc": "tsc --noEmit",
+    "types": "tsc --noEmit",
     "test": "vitest --config ./vitest.config.ts"
   },
   "dependencies": {
