--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -25,3 +25,7 @@ jobs:
   testing:
     uses: ./.github/workflows/testing.yml
     secrets: inherit
+
+  build:
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
