--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,10 @@ jobs:
         with:
           node-version-file: ".nvmrc"
       - run: npm ci
-      - run: npm run build:client
+      - run: |
+          REVISION=${{ github.sha }} \
+          API_URL=http://api-server \
+          npm run build:client
 
   server:
     runs-on: ubuntu-latest
@@ -23,4 +26,6 @@ jobs:
         with:
           node-version-file: ".nvmrc"
       - run: npm ci
-      - run: npm run build:server
+      - run: |
+          REVISION=${{ github.sha }} \
+          npm run build:server
