--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,7 @@
     },
     "outDir": "build",
     "target": "es2023",
-    "lib": ["es2024"]
+    "lib": ["ESNext"]
   },
   "include": ["./package.json", "**/*.ts"]
 }
