Runtime API_URL env var

--- a/client/.env.sample
+++ b/client/.env.sample
@@ -1,17 +1,7 @@
-NODE_ENV=development
 # git sha or other revision identifier
+# Required at build time!
 REVISION=local
 
-# Hostname for the dev server to bind to.
-DEVSERVER_HOSTNAME=localhost
-
-# Port number for the dev server to listen on.
-DEVSERVER_PORT=31234
-# Change the provided port to ensure it's not listed in the [Port Blocking](https://fetch.spec.whatwg.org/#port-blocking) section of WHATWG's fetch spec.
-
 # API URL for the server.
-# Required!
-API_URL=http://localhost:31235
-
-# Chromatic project token.
-CHROMATIC_PROJECT_TOKEN="<chromatic-project-token>"
+# Required at runtime!
+API_URL=http://localhost:31235/
