--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@listock/server": "*",
+    "@listock/tests": "*",
     "@tanstack/react-devtools": "^0.9.2",
     "@tanstack/react-pacer-devtools": "^0.5.2",
     "@tanstack/react-query-devtools": "^5.91.2",
@@ -45,13 +47,9 @@
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "msw": "^2.11.2",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^6.0.4"
-  },
-  "peerDependencies": {
-    "@listock/server": "*",
-    "@listock/tests": "*",
-    "msw": "^2.11.2"
   }
 }
