--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "REVISION=${REVISION} vite build",
     "types": "tsc --noEmit",
     "pretypes": "npm run build -w @listock/server",
     "test": "vitest --config ./vitest.config.ts"
