--- a/.github/workflows/build-client-docker.yml
+++ b/.github/workflows/build-client-docker.yml
@@ -1,4 +1,4 @@
-name: Build & Publish Image
+name: Build & Publish Docker Client Image
 
 on:
   workflow_call:
@@ -10,11 +10,17 @@ concurrency:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE: ghcr.io/${{ github.repository }}
+  IMAGE: ghcr.io/${{ github.repository }}-client
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          # - ubuntu-24.04-arm
+
     steps:
       - uses: actions/checkout@v4
 
@@ -22,8 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ghcr.io/${{ github.repository }}
+          images: ${{ env.IMAGE }}
           flavor: latest=false
           tags: |
             type=schedule
@@ -53,9 +58,9 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          # platforms: linux/amd64,linux/arm64
+          platforms: ${{ runner.arch == 'ARM64' && 'linux/arm64' || 'linux/amd64' }}
           push: true
           build-args: |
-            NEXT_PUBLIC_REVISION=${{ github.sha }}
+            REVISION=${{ github.sha }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
