--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@listock/server/router": ["../server/dist/router/index.d.ts"]
     },
     "outDir": "build",
     "target": "ESNext",
