--- a/.github/workflows/build-server-docker.yml
+++ b/.github/workflows/build-server-docker.yml
@@ -60,6 +60,7 @@ jobs:
         with:
           platforms: ${{ runner.arch == 'ARM64' && 'linux/arm64' || 'linux/amd64' }}
           push: true
+          file: server/Dockerfile
           build-args: |
             REVISION=${{ github.sha }}
           tags: ${{ steps.meta.outputs.tags }}
