--- a/.github/workflows/build-server-docker.yml
+++ b/.github/workflows/build-server-docker.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          # - ubuntu-24.04-arm
+          - ubuntu-24.04-arm
 
     steps:
       - uses: actions/checkout@v4
